--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,55 @@
+
+
 body {
-  background-color: red;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  display: block;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+.movie-details {
+  margin: 3% 0;
+
+}
+
+.left-box {
+  color: grey;
+}
+
+
+.card-img-top{
+  width: 100%;
+  max-height: 200px;
+  border-radius: 5%;
+}
+
+#film-container {
+  /* background: #666;
+  height: 300px;
+  width: 100%; */
+  display: grid;
+  grid-auto-flow: column;
+  gap: .25rem;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  /* position: relative; */
+}
+
+.film-card {
+margin: 0 10px;
+padding: 0;
+width: 180px;
+background: rgba(255, 255, 255, .2);
+border-radius: 5%;
+}
+
+.container {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  bottom: 7vh;
+  max-width: 100vw;
 }
