--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,8 +5,9 @@ body {
   height: 100vh;
   margin: 0;
   display: block;
-  background-repeat: no-repeat;
-  background-size: cover;
+  /* background-repeat: no-repeat;
+  background-size: cover; */
+  background-color: black;
 }
 
 
@@ -52,4 +53,101 @@ border-radius: 5%;
   flex-direction: row;
   bottom: 7vh;
   max-width: 100vw;
+}
+
+.glow {
+  font-size: 80px;
+  color: #fff;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+
+#showImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* mix-blend-mode: hard-light; */
+  background-position: center center;
+}
+
+#editImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* mix-blend-mode: hard-light; */
+  background-position: center center;
+}
+
+#indexImage {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  display: block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: black;
+}
+
+#showCard {
+  position: absolute;
+  display: flex;
+  margin: 0 10px;
+  padding: 0;
+  width: 200px;
+  max-height: 500px;
+  background: rgba(255, 255, 255, .2);
+  border-radius: 5%;
+  top: 15vh;
+  left: 30vw;
+}
+
+.neon {
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+  text-decoration: none;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+
+form {
+  position: absolute;
+  left: 20px;
+  bottom: 50px;
+  color: white;
 }
