--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,6 +5,11 @@
 
     <div style='background-image: url(/images/nasa.jpeg);'
     class="img-responsive" id="editImage">
+      <h1 class="newHeader">CREATE A NEW MOVIE</h1>
+    <nav class="nav nav-tabs justify-content-center">
+      <a id="tops" href='/movies'>HOME</a>
+
+    </nav>
 
       <form class="form" action="/movies" method="POST">
 
