--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,6 +4,11 @@
   <div style='background-image: url(/images/movieCut.jpeg);'
   class="img-responsive" id="editImage">
 
+  <nav class="nav nav-tabs justify-content-center tops">
+    <a id="editLink" href='/movies'>HOME</a>
+
+  </nav>
+
     <form class="form" action="/movies/<%=movie.id%>?_method=PUT" method="POST">
 
       <div class="mb-3">
