--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <h1 class="glow">SCI-FI CINEMA</h1>
 
     <nav class="nav nav-tabs justify-content-center">
-      <a id="createLink" href='/movies/new'>CREATE A NEW MOVIE</a>
+      <a id="newLink" href='/movies/new'>+ADD A NEW MOVIE</a>
 
     </nav>
 
@@ -21,9 +21,10 @@
             <a href='/movies/<%=movies[i]._id%>'>
             <img src="<%=movies[i].img%>" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title neon"><%=movies[i].name%></h5>
-              <p class="card-text"><%=movies[i].description%></p>
-              <a href="/movies/<%=movies[i]._id%>/edit" class="btn btn-primary">EDIT</a>
+              <h5 class="card-title neon" ><%=movies[i].name%></h5>
+              <p class="card-text" id="descrip" ><%=movies[i].description%></p>
+              <a href="/movies/<%=movies[i]._id%>/edit" class="btn btn-primary"
+                id="indexEditButton">EDIT</a>
             </div>
           </div>
             <% } %>
