--- a/views/show.ejs
+++ b/views/show.ejs
@@ -9,7 +9,7 @@
 
   <div class="card" id="showCard" >
 
-    <iframe width="350" height="250"
+    <iframe
     src="<%=movie.video%>" title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen></iframe>
@@ -22,7 +22,9 @@
     </div>
   </div>
 
-
+  <div class="comments">
+    <h2>Comments:</h2>
+  </div>
 
 
 
