--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,7 @@ body {
 margin: 0 10px;
 padding: 0;
 width: 180px;
+height: 60vh;
 background: rgba(255, 255, 255, .2);
 border-radius: 5%;
 text-decoration-line: none !important;
@@ -57,7 +58,7 @@ text-decoration-line: none !important;
   max-width: 100vw;
 }
 
-.glow {
+.glow, .hello {
   font-size: 80px;
   color: #fff;
   text-align: center;
@@ -103,6 +104,33 @@ text-decoration-line: none !important;
   background-size: cover;
   /* mix-blend-mode: hard-light; */
   background-position: center center;
+}
+#signImage {
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  display: block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* mix-blend-mode: hard-light; */
+  /* background-position: center center; */
+}
+
+#registerImage {
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  display: block;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #indexImage {
@@ -187,6 +215,7 @@ form {
 }
 .card-text {
   text-decoration: none !important;
+  color: grey;
 }
 
 iframe {
@@ -195,6 +224,7 @@ iframe {
   height: 300px !important;
   padding: 10px;
 }
+
 .comments {
   position: absolute;
   right: 10px;
@@ -206,4 +236,60 @@ iframe {
   background:rgba(255, 255, 255, .7);
   border-radius: 5%;
   text-decoration: underline;
+}
+/* #form {
+  background: rgba(0, 0, 0, 0.15);
+  padding: 0.25rem;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  height: 3rem;
+  box-sizing: border-box;
+  backdrop-filter: blur(10px);
+}
+#input {
+  border: none;
+  padding: 0 1rem;
+  flex-grow: 1;
+  border-radius: 2rem;
+  margin: 0.25rem;
+}
+#input:focus {
+  outline: none;
+}
+#form > button {
+  background: #333;
+  border: none;
+  padding: 0 1rem;
+  margin: 0.25rem;
+  border-radius: 3px;
+  outline: none;
+  color: #fff; }
+
+#messages {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#messages > li {
+  padding: 0.5rem 1rem;
+}
+#messages > li:nth-child(odd) {
+  background: #efefef;
+} */
+.hello{
+  width:1000px;
+  position: absolute;
+  justify-content: center;
+  left:45%
+  top: 50%;
+  animation-name: showDrop;
+  animation-duration: 3s;
+}
+@keyframes showDrop{
+  0%{opacity:0}
+  10%{transform: translateY(30px)}
+  100%{transform: translateY(650px), opacity:1}
 }
