--- a/views/new.ejs
+++ b/views/new.ejs
@@ -14,32 +14,32 @@
       <form class="form" action="/movies" method="POST">
 
         <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label">MOVIE TITLE:</label>
-          <input type="text" class="form-control" id="formGroupExampleInput"
+          <label for="formGroupExampleInput" class="form-label">MOVIE NAME:</label>
+          <input type="text" name="name" class="form-control" id="formGroupExampleInput"
             value="">
         </div>
         <div class="mb-3">
-          <label for="formGroupExampleInput2" class="form-label">OPENING DATE:</label>
-          <input type="text" class="form-control" id="formGroupExampleInput2"
+          <label for="formGroupExampleInput2" class="form-label">DESCRIPTION:</label>
+          <input type="text" name="description" class="form-control" id="formGroupExampleInput2"
             value="">
         </div>
         <div class="mb-3">
-          <label for="formGroupExampleInput2" class="form-label">MOVIE COVER</label>
-          <input type="text" class="form-control" id="formGroupExampleInput2"
+          <label for="formGroupExampleInput2" class="form-label">COVER IMAGE</label>
+          <input type="text" name="img" class="form-control" id="formGroupExampleInput2"
             value="">
         </div>
         <div class="mb-3">
           <label for="formGroupExampleInput2" class="form-label">TRAILER</label>
-          <input type="text" class="form-control" id="formGroupExampleInput2"
+          <input type="text" name="video" class="form-control" id="formGroupExampleInput2"
             value="">
         </div>
         <div class="mb-3">
           <label for="formGroupExampleInput2" class="form-label">RATING</label>
-          <input type="number" class="form-control" id="formGroupExampleInput2"
+          <input type="number" name="rating" class="form-control" id="formGroupExampleInput2"
             value="">
         </div>
 
-        <button type="submit" class="btn btn-primary">CREATE</button>
+        <input type="submit" value="Create Movie" class="btn btn-primary"></input>
 
       </form>
 
