--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,5 +1,7 @@
 <%- include('./partials/header.ejs')%>
 <body>
+
+
   <div style='background-image: url(/images/showpic.jpeg);'
   class="img-responsive" id="showImage">
   <nav class="nav nav-tabs justify-content-center tops">
@@ -24,11 +26,44 @@
 
   <div class="comments">
     <h2>Comments:</h2>
+    <ul id="messages"></ul>
+    <form id="form" action="">
+      <input id="input" autocomplete="off" />
+      
+      <button>Send</button>
+    </form>
   </div>
 
 
 
   </div>
 
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    let socket = io()
+
+    let messages = document.getElementById('messages');
+    let form = document.getElementById('form');
+    let input = document.getElementById('input');
+
+    const today = new Date()
+    const now = today.toLocaleString()
+
+   form.addEventListener('submit', function(e) {
+    e.preventDefault();
+    if (input.value) {
+      socket.emit('chat message', input.value + " " + now);
+      input.value = '';
+      }
+    });
+
+    socket.on('chat message', function(msg) {
+     let item = document.createElement('li');
+     item.textContent = msg;
+     messages.appendChild(item);
+     window.scrollTo(0, document.body.scrollHeight);
+    });
+
+  </script>
 
 <%- include('./partials/footer.ejs')%>
